flux/infrastructure/webapps/landing-page/service.yaml
# Auto-split from cluster files
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: webapps
spec:
  selector:
    app: landing-page
  ports:
  - name: http
    port: 80
    targetPort: 80
