flux/infrastructure/webapps/landing-page/silex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silex
  namespace: webapps
  labels:
    app: silex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silex
  template:
    metadata:
      labels:
        app: silex
    spec:
      containers:
      - name: silex
        image: silexlabs/silex:3.0.0
        resources:
          limits:
            memory: 512Mi
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8080
        - containerPort: 6807
        volumeMounts:
        - name: root
          mountPath: /silex/silex/storage
        - name: hosting
          mountPath: /silex/silex/hosting
      volumes:
      - name: root
        persistentVolumeClaim:
          claimName: silex-root
      - name: hosting
        persistentVolumeClaim:
          claimName: silex-hosting
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
        supplementalGroups:
        - 1000
---
apiVersion: v1
kind: Service
metadata:
  name: silex
  namespace: webapps
spec:
  selector:
    app: silex
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: mcp
    port: 6807
    targetPort: 6807
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: silex
  namespace: webapps
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`silex.becklab.cloud`)
    middlewares:
    - name: sso-admin-chain
      namespace: identity
    services:
    - name: silex
      port: 8080
  tls:
    secretName: silex-tls
